fixed hopefully whitespace removed

--- a/portfolio.css
+++ b/portfolio.css
@@ -256,7 +256,7 @@ video.prev{
 		height: 300px;
 		overflow-y: auto;
 		overflow-x: auto;
-		white-space: pre;
+		white-space: nowrap;
 		text-overflow: clip;
 	}
 
